Minor styling fix: Title positioning and overflow

--- a/overlays.css
+++ b/overlays.css
@@ -1,8 +1,9 @@
 .card-front-title {
-  transform: translate(-50%, 0);
   font-weight: bold;
   top: 4mm;
-  left: 35mm;
+  left: 3.5mm;
+  width: 63mm;
+  text-align: center;
 }
 
 .card-front-type {
